# json2class

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  json_class_generator.cpp  json_class_generator.h  lazy_person.h  main.cpp  person.h  person.json  person_example.cpp
.github/workflows/: cmake-multi-platform.yml
